public class AlarmForMotion {
    void start() {
        System.out.println("Alarm Dimulai..");
    }

    void stop() {
        System.out.println("Alarm berhenti..");
    }
}