public class MotionSms {
    public void sendMessage(String s){
        System.out.println("SMS dari detektor MOTION. Pesan adalah: "+s);
    }
}
