interface SensorListener {
    void detected();
}