public class SmokeSms {
    public void sendMessage(String s){
        System.out.println("SMS dari detektor ASAP. Pesan adalah: "+s);
    }
}
