public class SprinklerForSmoke {
    public  void turnOn() {
        System.out.println("Penyemprot menyala");
    }

    public void turnOff() {
        System.out.println("Penyemprot mati");
    }
}