@startuml

title __JAVA's Class Diagram__\n

  package  {
    class AlarmForMotion {
        ~ start()
        ~ stop()
    }
  }
  

  package  {
    interface Command {
        {abstract} + execute()
    }
  }
  

  package  {
    class FactoryX {
        + createMotionSensor()
        + createSmokeSensor()
    }
  }
  

  package  {
    class FactoryY {
        + createMotionSensor()
        + createSmokeSensor()
    }
  }
  

  package  {
    class HomeSecurityRemote {
        + setCommand()
        + buttonPressed()
    }
  }
  

  package  {
    class MainProject {
        {static} + main()
    }
  }
  

  package  {
    class MotionSms {
        + sendMessage()
    }
  }
  

  package  {
    class MotionSmsAdapter {
        + MotionSmsAdapter()
        + sendMessage()
    }
  }
  

  package  {
    interface SensorFactory {
        {abstract} + createMotionSensor()
        {abstract} + createSmokeSensor()
    }
  }
  

  package  {
    interface SensorForMotion {
        {abstract} + getDescription()
    }
  }
  

  package  {
    interface SensorForSmoke {
        {abstract} + getDescription()
    }
  }
  

  package  {
    interface SensorListener {
        {abstract} + detected()
    }
  }
  

  package  {
    class SensorSystem {
        - listeners : Vector
        + register()
        + notifyUser()
    }
  }
  

  package  {
    class SingleObject {
        {static} - instance : SingleObject
        - SingleObject()
        {static} + getInstance()
        + showMessage()
    }
  }
  

  package  {
    class SmokeSms {
        + sendMessage()
    }
  }
  

  package  {
    class SmokeSmsAdapter {
        + SmokeSmsAdapter()
        + sendMessage()
    }
  }
  

  package  {
    interface Sms {
        {abstract} + sendMessage()
    }
  }
  

  package  {
    class SprinklerForSmoke {
        + turnOn()
        + turnOff()
    }
  }
  

  package  {
    class StartAlarmCommand {
        + StartAlarmCommand()
        + execute()
    }
  }
  

  package  {
    class StopAlarmCommand {
        + StopAlarmCommand()
        + execute()
    }
  }
  

  package  {
    class TurnOffSprinklerCommand {
        + TurnOffSprinklerCommand()
        + execute()
    }
  }
  

  package  {
    class TurnOnSprinklerCommand {
        + TurnOnSprinklerCommand()
        + execute()
    }
  }
  

  package  {
    class XMotionSensor {
        {static} ~ DESCRIPTION : String
        + getDescription()
        + detected()
    }
  }
  

  package  {
    class XSmokeSensor {
        {static} ~ DESCRIPTION : String
        + getDescription()
        + detected()
    }
  }
  

  package  {
    class YMotionSensor {
        {static} ~ DESCRIPTION : String
        + getDescription()
        + detected()
    }
  }
  

  package  {
    class YSmokeSensor {
        {static} ~ DESCRIPTION : String
        + getDescription()
        + detected()
    }
  }
  

  FactoryX -up-|> SensorFactory
  FactoryY -up-|> SensorFactory
  HomeSecurityRemote o-- Command : command
  MotionSmsAdapter -up-|> Sms
  MotionSmsAdapter o-- MotionSms : adaptee
  SmokeSmsAdapter -up-|> Sms
  SmokeSmsAdapter o-- SmokeSms : adaptee
  StartAlarmCommand -up-|> Command
  StartAlarmCommand o-- AlarmForMotion : alarm
  StopAlarmCommand -up-|> Command
  StopAlarmCommand o-- AlarmForMotion : alarm
  TurnOffSprinklerCommand -up-|> Command
  TurnOffSprinklerCommand o-- SprinklerForSmoke : sprinkler
  TurnOnSprinklerCommand -up-|> Command
  TurnOnSprinklerCommand o-- SprinklerForSmoke : sprinkler
  XMotionSensor -up-|> SensorForMotion
  XMotionSensor -up-|> SensorListener
  XSmokeSensor -up-|> SensorForSmoke
  XSmokeSensor -up-|> SensorListener
  YMotionSensor -up-|> SensorForMotion
  YMotionSensor -up-|> SensorListener
  YSmokeSensor -up-|> SensorForSmoke
  YSmokeSensor -up-|> SensorListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
